# SMPSPlay

./: .gitattributes  .gitignore  CMakeLists.txt  Compiling.txt  Makefile  Readme.txt  SMPSPlay.dsp  SMPSPlay.dsw  SMPSPlay.sln  SMPSPlay.vcxproj  SMPSPlay.vcxproj.filters  TODO.txt
docs/: Commands.txt  Format_Drums_FM-PSG.txt  Format_preSMPS.txt  config.ini
docs/ExampleFiles/: DAC_All.ini  DAC_Banks.ini  DAC_MultiAlgo.ini  DAC_RateMode.ini  DAC_Simple.ini  DefCFlag_Flicky.txt  DefCFlag_Shinobi2.txt  DefDrum_AlexKidd_EnchantedCastle.txt  DefDrum_AlteresBeast.txt  DefDrum_Flicky.txt  DefDrum_GoldenAxe3.txt  DefDrum_PS4.txt  DefDrum_PSG_SpaceHarrier2.txt  DefDrum_Shinobi2.txt  DefDrv_Flicky.txt  DefDrv_Shinobi2.txt  DefDrv_SpaceHarrier2.txt
libs/: RequiredLibs.txt  build_libs_GCC.sh  build_libs_VC2010-Win32.bat  build_libs_VC2010-Win64.bat  build_libs_VC2017-Win32.bat  build_libs_VC2017-Win64.bat  build_libs_VC2019-Win32.bat  build_libs_VC2019-Win64.bat  build_libs_VC2022-Win32.bat  build_libs_VC2022-Win64.bat  build_libs_VC2022_141xp-Win32.bat  build_libs_VC2022_141xp-Win64.bat  build_libs_VC6.bat
libs/install/include/: Info.txt
libs/lib/: Info.txt
src/: Commands.txt  DefCFlag_Shinobi2.txt  DefDrum_PSG_Sonic2SMS.txt  DefDrum_Rent-A-Hero.txt  DefDrv_Flicky.txt  DefDrv_Shinobi2.txt  Format_Drums_FM-PSG.txt  Format_InsLib.txt  Format_PanAni.txt  Sound.c  Sound.h  Stream.c  Stream.h  dirent.c  ini_lib.c  ini_lib.h  loader.h  loader_data.c  loader_data.h  loader_def.c  loader_def.h  loader_ini.c  loader_ini.c.bak  loader_ini.h  loader_smps.c  loader_smps.h  main.c  vgmwrite.c  vgmwrite.h
src/Engine/: dac.c  dac.h  necpcm.c  necpcm.h  smps.c  smps.h  smps_commands.c  smps_commands.h  smps_drums.c  smps_extra.c  smps_int.h  smps_structs.h  smps_structs_int.h
src/chips/: 2612intf.c  2612intf.h  fm.h  fm2612.c  mamedef.h  sn76496.c  sn764intf.c  sn764intf.h  upd7759.c  upd7759.h
